--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>rtf-to-html</artifactId>
 	<packaging>jar</packaging>
 	<name>rtf-to-html</name>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<description>RTF to HTML conversion done right</description>
 	<url>http:///github.com/bbottema/rtf-to-html</url>
 
