--- a/pom.xml
+++ b/pom.xml
@@ -265,7 +265,7 @@
 						<java>SLASHSTAR_STYLE</java>
 					</mapping>
 					<includes>
-						<include>**/*.java</include>
+						<include>src/main/java/**/*.java</include>
 					</includes>
 				</configuration>
 				<executions>
